(env
  (dev
    (flags (:standard -warn-error -A -w -27-9))))

(library
 (name pa_gt)
 (public_name GT-p5)
 (modules Camlp5Helpers extension core2)
 (libraries camlp5 GT.GTCommon)
 (preprocess
     (action (run %{workspace_root}/camlp5/pp5+dump.byte %{input-file})))
 (flags (:standard -warn-error -A -rectypes))

 ;(preprocess (action (run camlp5 -I /home/kakadu/.opam/4.06.1+fp+flambda/lib/camlp5 pa_o.cmo pa_op.cmo pr_o.cmo %{input-file})) )
)


(rule
  (targets pp5+gt+plugins+dump.exe)
  (deps    ../common/GTCommon.cmxa pa_gt.cmxa
        ../plugins/show.cmxa
        ../plugins/gmap.cmxa
        ../plugins/fmt.cmxa
        ../plugins/compare.cmxa
        ../plugins/eq.cmxa
        ../plugins/foldl.cmxa
        ../plugins/foldr.cmxa
        ../plugins/stateful.cmxa
        ../plugins/eval.cmxa
        ../plugins/html.cmxa
       )
  (action  (run mkcamlp5.opt -package camlp5,base,ppxlib,ocamlgraph,logger pa_o.cmx %{deps} pa_log.cmx pr_dump.cmx -o %{targets} ))
)

(rule
  (targets pp5+gt+plugins+o.exe)
  (deps    ../common/GTCommon.cmxa pa_gt.cmxa
        ../plugins/show.cmxa
        ../plugins/gmap.cmxa
        ../plugins/fmt.cmxa
        ../plugins/compare.cmxa
        ../plugins/eq.cmxa
        ../plugins/foldl.cmxa
        ../plugins/foldr.cmxa
        ../plugins/stateful.cmxa
        ../plugins/eval.cmxa
        ../plugins/html.cmxa
       )
  (action  (run mkcamlp5.opt -package camlp5,base,ppxlib,ocamlgraph,logger pa_o.cmx %{deps} pa_log.cmx pr_o.cmx -o %{targets} ))
)

(rule
  (targets pp5+gt+dump.exe)
  (deps    ../common/GTCommon.cmxa pa_gt.cmxa )
  (action  (run mkcamlp5.opt -package camlp5,base,ppxlib,ocamlgraph,logger pa_o.cmx %{deps} pa_log.cmx pr_dump.cmx -o %{targets} ))
)

(rule
  (targets pp5+gt+o.exe)
  (deps    ../common/GTCommon.cmxa pa_gt.cmxa )
  (action  (run mkcamlp5.opt -package camlp5,base,ppxlib,ocamlgraph,logger pa_o.cmx %{deps} pa_log.cmx pr_o.cmx -o %{targets} ))
)

(rule
  (targets pp5+dump.exe)
  (action  (run mkcamlp5.opt -package camlp5 pa_o.cmx pr_dump.cmx -o %{targets}))
)

(rule
  (targets pp5+dump.byte)
  (action  (run mkcamlp5 -package camlp5 pa_o.cmo pr_dump.cmo -o %{targets}))
)
