(env
 (_
  (flags
   (:standard -w -27-32+9 -warn-error -A))))

(library
 (name GTCommon)
 (public_name GT.common)
 (libraries ppxlib ocamlgraph base)
 ; from ppxlib.0.16 it doesn't depend on base but depepends on ppxlib.stdppx
 ; TODO: remove dependecy on base
 (modules HelpersBase Naming Expander GTHELPERS_sig Plugin_intf Plugin)
 (synopsis
  "Actual code that perform codegeneration. Will used for creating new plugins")
 (flags
  (:standard -w -32-9 -warn-error -A))
 (inline_tests)
 (preprocess
  (pps ppx_inline_test ppxlib.metaquot))
 (foreign_stubs
  (language c)
  (names common_stubs)))
