(env
 (_
  (flags
   (:standard -w -27-32+9 -warn-error -A))))

(library
 (name GTCommon)
 (public_name GT.common)
 (libraries ppxlib ppxlib.stdppx ocamlgraph)
 (modules HelpersBase Naming Expander GTHELPERS_sig Plugin_intf Plugin)
 (synopsis
  "Actual code that perform codegeneration. Will used for creating new plugins")
 (flags
  (:standard -w -32-9 -warn-error -A))
 ;(inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps
   ppx_inline_test
   ;ppx_expect
   ppxlib.metaquot))
 (foreign_stubs
  (language c)
  (names common_stubs)))
