(executable
 (name discover)
 (modules Discover)
 (libraries str dune-configurator))

(rule
 (targets camlp5-flags.cfg)
 (action
  (run ./discover.exe -all-flags)))

(rule
 (targets package-doc.cfg)
 (action
  (run ./discover.exe -doc-flags)))

(rule
 (targets dune.tests)
 (alias discover-tests)
 (deps
  (source_tree ../regression))
 (mode
  (promote
   (into ../regression)))
 (action
  (run ./discover.exe -tests -tests-dir %{project_root}/regression)))
