(env
  (dev
    (flags (:standard -warn-error -A -w -7-9-13))))


(library
 (name show)
 (public_name GT.syntax.show)
 (modules show)
 (libraries GTCommon)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name fmt)
 (public_name GT.syntax.fmt)
 (modules gfmt)
 (libraries GTCommon)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name foldl)
 (public_name GT.syntax.foldl)
 (modules foldl)
 (libraries GTCommon)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name foldr)
 (public_name GT.syntax.foldr)
 (modules foldr)
 (libraries GTCommon foldl)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name eq)
 (public_name GT.syntax.eq)
 (modules eq)
 (libraries GTCommon compare)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name compare)
 (public_name GT.syntax.compare)
 (modules compare)
 (libraries GTCommon)
 (flags (:standard -w -27-7-9 -warn-error -A))
)

(library
 (name gmap)
 (public_name GT.syntax.gmap)
 (modules gmap)
 (libraries GTCommon)
 (flags (:standard -w -27 -warn-error -A))
)

(library
 (name eval)
 (public_name GT.syntax.eval)
 (modules eval)
 (libraries GTCommon gmap)
 (flags (:standard -w -27-7-9-13-36 -warn-error -A))
)

(library
 (name html)
 (public_name GT.syntax.html)
 (modules html)
 (libraries GTCommon)
 (flags (:standard -w -27-7-9-13-36 -warn-error -A))
)

(library
 (name hash)
 (public_name GT.syntax.hash)
 (modules hash)
 (libraries GTCommon)
 (flags (:standard -w -27-7-9-13-36 -warn-error -A))
)

(library
 (name stateful)
 (public_name GT.syntax.stateful)
 (modules stateful)
 (libraries GTCommon gmap)
 (flags (:standard -w -27 -warn-error -A))
)

