(library
 (name ppx)
 (public_name GT.ppx)
 (kind ppx_rewriter)
 (libraries base ppxlib GTCommon)
 (modules Ppx_deriving_gt PpxHelpers)
 (synopsis "PPX syntax extension on top of ppxlib")
 (preprocess
  (pps ppxlib.metaquot))
 (flags
  (:standard -w -27-9 -warn-error -A -linkall)))

(library
 (name ppx_all)
 (public_name GT.ppx_all)
 (kind ppx_rewriter)
 (libraries
  ppx
  show
  gfmt
  gmap
  compare
  eq
  foldl
  foldr
  eval
  stateful
  enum
  html
  ghash)
 (modules ppx_all)
 (wrapped false)
 (synopsis "PPX syntax extension on top of ppxlib + plugins")
 (flags
  (:standard -linkall -w -33)))

(executable
 (name pp_gt)
 (modules pp_gt)
 (libraries
  base
  ppxlib
  GT.common
  ppx
  show
  gfmt
  gmap
  eval
  stateful
  foldr
  foldl
  compare
  eq
  html
  ghash
  enum)
 (flags
  (:standard -linkall)))

;(executable
; (name pp_all)
; (modules pp_gt)
; (flags (:standard -linkall))
; (libraries ppx_all ppxlib))
