(env
  (dev
    (flags (:standard -warn-error -A -w -27-39-32-7-34))))




(alias
  (name    camlp5-tests)
  (deps
     test000.exe  test001.exe  test002.exe test003.exe
     test004.exe  test005.exe  test006.exe  test007.exe  test008.exe  test009.exe  test010.exe
     test011.exe  test012.exe  test013.exe  test014.exe  test015.exe  test016.exe
     test017.exe  test018.exe test019.exe  test020.exe
     test021.exe  test022.exe  test023.exe  test024.exe  test025.exe  test026.exe
     test027.exe  test028.exe test029.exe  test030.exe
     test031.exe  test032.exe  test036.exe  test037.exe  test040.exe  test041.exe  test042.exe
     test081llist.exe
     test082mutal.exe
     test083polyvar.exe
     test086std.exe
     test087stateful.exe
     test089struct.exe
     ;test090eval
     ;test091eval
     test705.exe)
)

(tests
  (names
    test000  test001  test002 test003
    test004  test005  test006  test007 test008  test009  test010
    test011  test012  test013  test014  test015  test016  test017  test018 test019  test020
    test021  test022  test023  test024  test025  test026  test027  test028 test029  test030
    test031  test032  test036  test037  test040  test041  test042
    test081llist
    test082mutal
    test083polyvar
    test086std
    test087stateful
    test089struct
    ;test090eval
    ;test091eval
    test705
  )
  (modules
    test000  test001  test002  test003
    test004  test005  test006  test007 test008  test009  test010
    test011  test012  test013  test014  test015  test016  test017  test018 test019  test020
    test021  test022  test023  test024  test025  test026  test027  test028 test029  test030
    test031  test032  test036  test037  test040  test041  test042
    test081llist
    test082mutal
    test083polyvar
    test086std
    test087stateful
    test089struct
    ;test090eval
    ;test091eval
    test705
  )
  ;(modules_without_implementation test023_pp)

  (libraries GT)
  (flags (:standard -warn-error -A  -rectypes))

  (preprocess
    (action
      (run %{workspace_root}/camlp5/pp5+gt+plugins+o.exe %{input-file})
    )
  )

  (preprocessor_deps
    ;(file %{workspace_root}/camlp5/pp5+gt+o.exe)
    (file %{workspace_root}/camlp5/pp5+gt+plugins+o.exe)
    ;(file %{workspace_root}/camlp5/pp5+gt+plugins+dump.exe)
    )
)


(tests
  (names
  ;test791showT

  ; test795intoption    ; An experiment. TODO: remove

  ;test797nats
  test799

  test800
  ;test801mutal    ; TODO: fix error and reenable test
  test802mutal    test803polyvar    test804polyvar
  test805std    test806fmt    test807showT
  ;test808ext           ; open types are not supported
  ;test809cool          ; working with ppx_import is not repaired
  ;test810cool
  test811compare    test812html    test813htmlTy
  ;test814nonreg        ; TODO: fix error and reenable test
  test815abstr    test816hash    test820spec    test821clab
  test822
  test823list    test824mut    test825tuples    test826antiph    test828combi    test840garrique
  )
  (modules
    ;test791showT
    ;test795intoption
    ;test797nats
    test799

    test800
    ;test801mutal
    test802mutal    test803polyvar    test804polyvar
    test805std    test806fmt    test807showT
    ;test808ext
    ;test809cool
    ;test810cool
    test811compare    test812html    test813htmlTy
    ;test814nonreg
    test815abstr    test816hash    test820spec    test821clab
    test822
    test823list    test824mut    test825tuples    test826antiph    test828combi    test840garrique
  )


  (libraries GT)
  (flags (:standard -warn-error -A -w -27-39-32-7 ))

  ;(preprocess (pps  show gmap compare GT.ppx))
  (preprocess (action
      (run %{workspace_root}/ppx/pp_gt.exe  %{input-file})
  ))

  (preprocessor_deps
    (file %{workspace_root}/ppx/pp_gt.exe))
)

(tests
  (names  test798gen)
  (modules    test798gen)


  (libraries GT)
  (flags (:standard -rectypes -warn-error -A -w -27-39-32-7 ))

  ;(preprocess (pps show gmap compare GT.ppx))
  (preprocess (action
    (run %{workspace_root}/ppx/pp_gt.exe --as-pp %{input-file})
  ))

  (preprocessor_deps
    (file %{workspace_root}/ppx/pp_gt.exe))
)

(alias
  (name    ppx-tests)
  (deps
    %{env:ppx-tests=}
    ;test799.exe
    ;test798gen.exe

    ;test800.exe
    ;test801mutal    ; TODO: fix error and reenable test
    ;test802mutal.exe    test803polyvar.exe    test804polyvar.exe
    ;test805std.exe    test806fmt.exe    test807showT.exe
    ;test808ext           ; open types are not supported
    ;test809cool          ; working with ppx_import is not repaired
    ;test810cool
    ;test811compare.exe    test812html.exe    test813htmlTy.exe
    ;test814nonreg        ; TODO: fix error and reenable test
    ;test815abstr.exe    test816hash.exe    test820spec.exe    test821clab.exe
    ;test822.exe
    ;test823list.exe    test824mut.exe    test825tuples.exe    test826antiph.exe    test828combi.exe    test840garrique.exe
  )
)


(alias
  (name    all-tests)
  (deps    (alias camlp5-tests) (alias ppx-tests))
  )



;(test (name test800))
