(env
 (dev
  (flags
   (:standard -warn-error -A -w -32))))

(library
 (name View)
 (public_name GT.View)
 (modules View)
 (flags
  (:standard -w -27-33 -warn-error -A)))

(library
 (name HTML)
 (public_name GT.HTML)
 (libraries View)
 (modules HTML)
 (flags
  (:standard -w -27-33 -warn-error -A)))

(library
 (name GT)
 (public_name GT)
 (modules GT)
 (libraries HTML)
 (synopsis "Generic transformers for algebraic types")
 (preprocessor_deps
  ;(package GT-p5)
  (file %{project_root}/camlp5/pp5+gt+dump.exe))
 (preprocess
  (pps m4instead GT.ppx_all))
 (flags
  (:standard -w -27-33)))

; (library
;  (name syntax_p5)
;  (public_name GT.syntax)
;  (wrapped false)
;  (modules)
;  (libraries GT-p5))
